Bug 1797978 [Wayland] Fire Vsync from idle callback r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D160797