widget/gtk/WaylandVsyncSource.cpp
@@ -248,6 +248,8 @@ void WaylandVsyncSource::IdleCallback() {
   MOZ_DIAGNOSTIC_ASSERT(NS_IsMainThread());
 
   RefPtr<nsWindow> window;
+  TimeStamp lastVSync;
+  TimeStamp outputTimestamp;
   {
     MutexAutoLock lock(mMutex);
 
@@ -268,10 +270,20 @@ void WaylandVsyncSource::IdleCallback() {
     LOG("  fire idle vsync");
     CalculateVsyncRate(lock, TimeStamp::Now());
     mLastVsyncTimeStamp = TimeStamp::Now();
+
+    lastVSync = mLastVsyncTimeStamp;
+    outputTimestamp = mLastVsyncTimeStamp + mVsyncRate;
     window = mWindow;
   }
+
   // This could disable vsync.
   window->NotifyOcclusionState(OcclusionState::OCCLUDED);
+
+  // Make sure to fire vsync now even if we get disabled afterwards.
+  // This gives an opportunity to clean up after the visibility state change.
+  if (!window->IsDestroyed()) {
+    NotifyVsync(lastVSync, outputTimestamp);
+  }
 }
 
 void WaylandVsyncSource::FrameCallback(wl_callback* aCallback, uint32_t aTime) {
